--- a/APP_JAVA/app/src/main/AndroidManifest.xml
+++ b/APP_JAVA/app/src/main/AndroidManifest.xml
@@ -19,5 +19,10 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-feature android:name="android.hardware.camera.front"/>
+    <uses-feature android:name="android.hardware.camera.front.autofocus"/>
 
 </manifest>
